# morok

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cross_build.sh  run_tests.sh
.github/actions/setup-llvm/: action.yml
.github/workflows/: ci.yml
cmake/: MorokLLVM.cmake  MorokTest.cmake  MorokWarnings.cmake
docs/: algorithms.md  insurance-tasks.md
include/morok/config/: PassConfig.hpp  Preset.hpp  Resolver.hpp  TomlLoader.hpp
include/morok/core/: Entropy.hpp  Feistel.hpp  Galois8.hpp  KnuthHash.hpp  LogisticMap.hpp  MbaIdentities.hpp  Random.hpp  Splitmix64.hpp  SubstitutionIdentities.hpp  XorShare.hpp  Xoshiro256.hpp
include/morok/ir/: Annotations.hpp  ControlFlowFlattener.hpp  IRRandom.hpp  InstUtil.hpp  Reg2Mem.hpp  SymbolCloak.hpp
include/morok/passes/: AdversarialFunctionMerging.hpp  AliasOpaquePredicates.hpp  AntiAnalysis.hpp  ArithmeticTables.hpp  BogusControlFlow.hpp  ChaosStateMachine.hpp  CodeRegionKdf.hpp  CoherentDecoys.hpp  ConstantEncryption.hpp  DataEntangledFlattening.hpp  DataFlowIntegrity.hpp  DispatcherlessRouting.hpp  ExternalSecretBinding.hpp  FaultPagedPayload.hpp  Flattening.hpp  FunctionCallObfuscate.hpp  FunctionWrapper.hpp  IndirectBranch.hpp  InterproceduralFsm.hpp  Mba.hpp  MicrocodeStress.hpp  MqGate.hpp  MutualGuardGraph.hpp  NonInvertibleState.hpp  OptimizerAmplification.hpp  PathExplosion.hpp  PhiTangling.hpp  PointerLaundering.hpp  RuntimeSeal.hpp  SealedBlob.hpp  SelfChecksumConstants.hpp  SplitBasicBlocks.hpp  StackCoalescing.hpp  StateOpaquePredicates.hpp  StringEncryption.hpp  SubThresholdPersistence.hpp  Substitution.hpp  TracerAttestation.hpp  TypePunning.hpp  VectorObfuscation.hpp  (+1 more)
include/morok/pipeline/: Scheduler.hpp
include/morok/runtime/: PlatformRuntime.hpp
programs/: call_abi_stress_matrix.c  cf_duff_device_parser.c  cf_irreducible_state_maze.c  cf_license_crackme.c  cf_longjmp_threaded_vm.c  cpp_allocator_polymorph_zoo.cpp  cpp_consteval_tuple_automaton.cpp  cpp_constexpr_variant_graph.cpp  cpp_coroutine_lifetime.cpp  cpp_exception_variant_unwind.cpp  cpp_type_erased_callmaze.cpp  fp_denormal_rounding_lab.c  fp_fixedpoint_hybrid_solver.c  fp_piecewise_chaos.c  int_carryless_crc_mesh.c  int_crypto_mix_network.c  int_divrem_wide_lattice.c  mem_alias_lifetime_graph.c  mem_flexible_arena_rewriter.c  mem_provenance_launder_lab.c  simd_portable_bitplane.c
src/config/: CMakeLists.txt  Preset.cpp  Resolver.cpp  TomlLoader.cpp
src/core/: CMakeLists.txt  Entropy.cpp
src/ir/: Annotations.cpp  CMakeLists.txt  ControlFlowFlattener.cpp  IRRandom.cpp  InstUtil.cpp  Reg2Mem.cpp  SymbolCloak.cpp
src/passes/: AdversarialFunctionMerging.cpp  AliasOpaquePredicates.cpp  AntiAnalysis.cpp  ArithmeticTables.cpp  BogusControlFlow.cpp  CMakeLists.txt  CallerKeyedDispatch.cpp  ChaosStateMachine.cpp  CodeRegionKdf.cpp  CoherentDecoys.cpp  ConstantEncryption.cpp  DataEntangledFlattening.cpp  DataFlowIntegrity.cpp  DecoyStrings.cpp  DispatcherlessRouting.cpp  ExternalSecretBinding.cpp  FaultPagedPayload.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  HashGatedSelfDecrypt.cpp  IndirectBranch.cpp  InterproceduralFsm.cpp  Mba.cpp  MicrocodeStress.cpp  MqGate.cpp  MutualGuardGraph.cpp  NonInvertibleState.cpp  OptimizerAmplification.cpp  PathExplosion.cpp  PhiTangling.cpp  PointerLaundering.cpp  SealedBlob.cpp  SelfChecksumConstants.cpp  SplitBasicBlocks.cpp  StackCoalescing.cpp  StateOpaquePredicates.cpp  StringEncryption.cpp  SubThresholdPersistence.cpp  Substitution.cpp  (+6 more)
src/pipeline/: CMakeLists.txt  Plugin.cpp  Scheduler.cpp
src/runtime/: PlatformRuntime.cpp
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  adversarial.toml  adversarial_binary.py  adversarial_patch.sh  boundary_trace_audit.py  compile_programs.sh  differential.sh  differential_vm.sh  fail_closed_unsealed.sh  fco_exception_threads.sh  fco_exception_threads.toml  max.toml  mutual_guard_adversarial.toml  run_programs.sh
tests/e2e/fixtures/: adversarial_integrity.c  boundary_trace.c  fco_exception_threads.c  workload.c
tests/ir/: CMakeLists.txt  test_passes.cpp
tests/support/: doctest_main.cpp
tests/unit/config/: CMakeLists.txt  test_merge.cpp  test_preset.cpp  test_resolve.cpp  test_toml_loader.cpp
tests/unit/core/: CMakeLists.txt  test_entropy.cpp  test_feistel.cpp  test_galois8.cpp  test_knuth_hash.cpp  test_logistic_map.cpp  test_mba_identities.cpp  test_random.cpp  test_splitmix64.cpp  test_substitution_identities.cpp  test_xorshare.cpp  test_xoshiro256.cpp
